@@ -1,3 +1,5 @@
+* Skip MYMETA (Alexandr Ciornii)
+
 [Changes for 0.64 - Sun,  9 May 2010 00:50:11 +0200]
 
 * Avoid creating gnupg configuration files for the user invoking Makefile.PL
